# freshservice_mcp_managed

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
src/freshservice_mcp/: server.py
tests/: test-fs-mcp.py
