[project]
name = "freshservice-mcp-managed"
version = "1.0.0"
description = "A managed fork of freshservice-mcp with controlled tool access via allowlists"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "build>=1.2.2.post1",
    "httpx==0.28.1",
    "mcp[cli]>=1.3.0",
    "pydantic>=2.10.6",
]

[[project.authors]]
name = "Gopi Krishnan"
email = "gopi@effy.co.in"

[[project.authors]]
name = "Maanaesh Swamy"
email = "maanaesh.s@effy.co.in"

[[project.authors]]
name = "Vijay Ragunath"
email = "vijay.r@effy.co.in"

[project.scripts]
freshservice-mcp = "freshservice_mcp.server:main"

